--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "webservice-voucher",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test" : "node test.js"
   },
   "keywords": [],
   "author": "",
